--- a/juliana/juliana_notebook.ipynb
+++ b/juliana/juliana_notebook.ipynb
@@ -9,140 +9,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32mO novo animal cadastrado é: \u001b[0m ['Dona Florinda', 'Réptil', '1', '2', 'Carlos']\n",
-      "\u001b[32mO novo animal cadastrado é: \u001b[0m ['Matilde', 'Peixe', '2', '1', 'Leiticia']\n",
-      "\u001b[32mO novo animal cadastrado é: \u001b[0m ['Medusa', 'Réptil', '8', '15', 'Marcela']\n",
-      "\u001b[32mO novo animal cadastrado é: \u001b[0m ['Einsten', 'Gato', '1', '2.5', 'Leiticia']\n",
-      "\u001b[32mO novo animal cadastrado é: \u001b[0m ['Mendel', 'Pássaro', '1', '2', 'Gabriel']\n",
-      "\u001b[36mTodos animais são: \u001b[0m [['Koda', 'Cão', 6, 18, 'Carlos'], ['Murphy', 'Gato', 6, 5.5, 'Juliana'], ['Dona Florinda', 'Réptil', '1', '2', 'Carlos'], ['Matilde', 'Peixe', '2', '1', 'Leiticia'], ['Medusa', 'Réptil', '8', '15', 'Marcela'], ['Einsten', 'Gato', '1', '2.5', 'Leiticia'], ['Mendel', 'Pássaro', '1', '2', 'Gabriel']]\n",
-      "_______ Remoção___________\n",
-      "\u001b[31m ['Koda', 'Cão', 6, 18, 'Carlos'] \u001b[0m\n",
-      "\u001b[31m ['Dona Florinda', 'Réptil', '1', '2', 'Carlos'] \u001b[0m\n",
-      "\u001b[31m ['Medusa', 'Réptil', '8', '15', 'Marcela'] \u001b[0m\n",
-      "\u001b[31m ['Mendel', 'Pássaro', '1', '2', 'Gabriel'] \u001b[0m\n",
-      "Todos animais são: [['Murphy', 'Gato', 6, 5.5, 'Juliana'], ['Matilde', 'Peixe', '2', '1', 'Leiticia'], ['Einsten', 'Gato', '1', '2.5', 'Leiticia']]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import random\n",
-    "\n",
-    "align = \"^\" # ['<', '>', '^'] \n",
-    "width = 15\n",
-    "color_green = \"\\33[32m\"\n",
-    "color_y= \"\\33[33m\"\n",
-    "color_red= \"\\33[31m\"\n",
-    "color_b= \"\\33[36m\"\n",
-    "style = \"\\33[1m\"\n",
-    "background = \"\\33[47m\"\n",
-    "\n",
-    "nomes_pets = [\"Dona Florinda\", \"Matilde\", \"Medusa\", \"Einsten\", \"Mendel\"]\n",
-    "espécies = [\"Cachorro\", \"Gato\", \"Pássaro\", \"Réptil\", \"Peixe\"]\n",
-    "idades = [\"2\", \"5\", \"1\", \"8\", \"3\"]\n",
-    "pesos = [\"2.5\", \"2\", \"1\", \"8\", \"15\"]\n",
-    "nomes_donos = [\"Ana\", \"Savanna\", \"Carlos\", \"Gabriel\", \"Marcela\", \"Leiticia\", \"Juliana\"]\n",
-    "\n",
-    "animais = [\n",
-    "    [\"Koda\", \"Cão\", 6, 18, \"Carlos\"],\n",
-    "    [\"Murphy\", \"Gato\", 6, 5.5, \"Juliana\"],\n",
-    "]\n",
-    "\n",
-    "def adicionar_pet ():\n",
-    "    for pet in nomes_pets:\n",
-    "        espécie = espécies [random.randrange(len(espécies))]\n",
-    "        idade = idades [random.randrange(len(idades))]\n",
-    "        peso = pesos [random.randrange(len(pesos))]\n",
-    "        nome_dono = nomes_donos [random.randrange(len(nomes_donos))]\n",
-    "        \n",
-    "        novo_pet = [pet, espécie, idade, peso, nome_dono]\n",
-    "        print(f'{color_green}O novo animal cadastrado é: \\033[0m {novo_pet}')\n",
-    "        animais.append(novo_pet)\n",
-    "\n",
-    "adicionar_pet()\n",
-    "\n",
-    "print(f'{color_b}Todos animais são: \\033[0m {animais}')\n",
-    "numero_de_animais = len(animais)\n",
-    "print(\"_______ Remoção___________\")\n",
-    "\n",
-    "def remover_pet ():\n",
-    "   \n",
-    "    for animal in animais:\n",
-    "        print(f'{color_red} {animal} \\033[0m')\n",
-    "        if animal in animais:\n",
-    "            animais.remove(animal)\n",
-    "        else: \n",
-    "            print(\"n tem o nome pet\")\n",
-    "        \n",
-    "remover_pet()\n",
-    "print(f'Todos animais são: {animais}')\n",
-    "  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 136,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  Número de animais: 3\n",
-      "_______Atualizar___________\n",
-      "\u001b[33m O animal a ser atualizado será: \u001b[0m ['Murphy', 'Gato', 6, 5.5, 'Juliana']\n",
-      "\u001b[32mO animal atualizado é: \u001b[0m ['Murphy', 'Cachorro', '3', '15', 'Juliana']\n",
-      "\u001b[33m O animal a ser atualizado será: \u001b[0m ['Einsten', 'Gato', '1', '2.5', 'Leiticia']\n",
-      "\u001b[32mO animal atualizado é: \u001b[0m ['Einsten', 'Peixe', '8', '2', 'Leiticia']\n",
-      "\u001b[33m O animal a ser atualizado será: \u001b[0m ['Einsten', 'Peixe', '8', '2', 'Leiticia']\n",
-      "\u001b[32mO animal atualizado é: \u001b[0m ['Einsten', 'Cachorro', '3', '2.5', 'Leiticia']\n",
-      "Todos animais são: [['Matilde', 'Peixe', '2', '1', 'Leiticia'], ['Murphy', 'Cachorro', '3', '15', 'Juliana'], ['Einsten', 'Cachorro', '3', '2.5', 'Leiticia']]\n",
-      "  Número de animais: 3\n"
-     ]
-    }
-   ],
-   "source": [
-    "import random\n",
-    "numero_de_animais = len(animais)\n",
-    "print(f\"  Número de animais: {numero_de_animais}\")\n",
-    "print(\"_______Atualizar___________\")\n",
-    "\n",
-    "def atualizar_animal():\n",
-    "    for animal in animais:\n",
-    "        print(f'{color_y} O animal a ser atualizado será: \\033[0m {animal}')\n",
-    "        if animal in animais:\n",
-    "            nova_especie = espécies [random.randrange(len(espécies))]\n",
-    "            nova_idade = idades [random.randrange(len(idades))]\n",
-    "            novo_peso = pesos [random.randrange(len(pesos))]\n",
-    "            \n",
-    "            pet_atualizado = [animal[0], nova_especie, nova_idade, novo_peso, animal[4]]\n",
-    "            print(f'{color_green}O animal atualizado é: \\033[0m {pet_atualizado}')\n",
-    "            animais.remove(animal)\n",
-    "            animais.append(pet_atualizado)\n",
-    "        else: \n",
-    "            print(f'este animal não está cadastrado')        \n",
-    "atualizar_animal()\n",
-    "\n",
-    "print(f'Todos animais são: {animais}')\n",
-    "numero_de_animais = len(animais)\n",
-    "print(f\"  Número de animais: {numero_de_animais}\")\n",
-    "\n",
-    "# message1 = 'Nome Pet'\n",
-    "# message2 = 'Espécie'\n",
-    "# message3 = 'Idade'\n",
-    "# message4 = 'Peso(kg)'\n",
-    "# message5 = 'Dono'\n",
-    "# print(f'|{message1:{align}{width}}{message2:{align}{width}}{message3:{align}{width}}{message4:{align}{width}}{message5:{align}{width}}|')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 163,
    "metadata": {},
    "outputs": [
@@ -183,28 +49,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "| Nome Pet  Espécie    Idade    Peso(kg)    Dono   |\n",
-      "['koda', 'cao', 6, '18', 'carlos']\n"
+      "\u001b[32mO novo animal cadastrado é: \u001b[0m ['Dona Florinda', 'Gato', '1', '15', 'Juliana']\n",
+      "\u001b[32mO novo animal cadastrado é: \u001b[0m ['Matilde', 'Peixe', '5', '2', 'Gabriel']\n",
+      "\u001b[32mO novo animal cadastrado é: \u001b[0m ['Medusa', 'Peixe', '2', '2', 'Ana']\n",
+      "\u001b[32mO novo animal cadastrado é: \u001b[0m ['Einsten', 'Gato', '5', '2.5', 'Leiticia']\n",
+      "\u001b[32mO novo animal cadastrado é: \u001b[0m ['Mendel', 'Cachorro', '2', '15', 'Marcela']\n",
+      "\u001b[36mTodos animais são: \u001b[0m [['Koda', 'Cão', 6, 18, 'Carlos'], ['Murphy', 'Gato', 6, 5.5, 'Juliana'], ['Dona Florinda', 'Gato', '1', '15', 'Juliana'], ['Matilde', 'Peixe', '5', '2', 'Gabriel'], ['Medusa', 'Peixe', '2', '2', 'Ana'], ['Einsten', 'Gato', '5', '2.5', 'Leiticia'], ['Mendel', 'Cachorro', '2', '15', 'Marcela']]\n",
+      "_______ Remoção___________\n"
      ]
     }
    ],
    "source": [
-    "# desafio extra pessoa hahaha pet shop (usar um FOR OU WHILE)\n",
+    "#desafio tentativa oficial \n",
     "\n",
-    "nome = str(input('Qual o nome do seu pet?'))\n",
+    "align = \"^\" # ['<', '>', '^'] \n",
+    "width = 15\n",
+    "color_green = \"\\33[32m\"\n",
+    "color_y= \"\\33[33m\"\n",
+    "color_red= \"\\33[31m\"\n",
+    "color_b= \"\\33[36m\"\n",
+    "style = \"\\33[1m\"\n",
+    "background = \"\\33[47m\"\n",
+    "\n",
+    "animais = [\n",
+    "    [\"Koda\", \"Cão\", 6, 18, \"Carlos\"],\n",
+    "    [\"Murphy\", \"Gato\", 6, 5.5, \"Juliana\"],\n",
+    "]\n",
+    "\n",
+    "def adicionar_pet ():\n",
+    "    for pet in nomes_pets:\n",
+    "        espécie = espécies [random.randrange(len(espécies))]\n",
+    "        idade = idades [random.randrange(len(idades))]\n",
+    "        peso = pesos [random.randrange(len(pesos))]\n",
+    "        nome_dono = nomes_donos [random.randrange(len(nomes_donos))]\n",
+    "        \n",
+    "        novo_pet = [pet, espécie, idade, peso, nome_dono]\n",
+    "        print(f'{color_green}O novo animal cadastrado é: \\033[0m {novo_pet}')\n",
+    "        animais.append(novo_pet)\n",
+    "\n",
+    "adicionar_pet()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mO novo animal cadastrado é: \u001b[0m ['Tipi', 'Cachorro', 6, '17', 'Carlos'] \n",
+      "\n",
+      "=============================\n",
+      "| Nome Pet  Espécie    Idade    Peso(kg)    Dono   |\n",
+      "['Koda', 'Cão', 6, 18, 'Carlos']\n",
+      "['Murphy', 'Gato', 6, 5.5, 'Juliana']\n",
+      "['Dona Florinda', 'Gato', '1', '15', 'Juliana']\n",
+      "['Matilde', 'Peixe', '5', '2', 'Gabriel']\n",
+      "['Medusa', 'Peixe', '2', '2', 'Ana']\n",
+      "['Einsten', 'Gato', '5', '2.5', 'Leiticia']\n",
+      "['Mendel', 'Cachorro', '2', '15', 'Marcela']\n",
+      "['Tipi', 'Cachorro', 6, '17', 'Carlos']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#adicionar manualmente\n",
+    "\n",
+    "nome_pet = str(input('Qual o nome do seu pet?'))\n",
     "espécie = str(input('Qual a espécie do seu pet?'))\n",
     "idade = int(input('Qual idade do seu pet?'))\n",
     "peso = str(input('Qual o peso do seu pet(em kg)?'))\n",
     "nome_dono = str(input('Qual é o seu nome(nome do dono)?'))\n",
     "\n",
-    "animal = [nome, espécie, idade, peso, nome_dono]\n",
+    "def adicionar_pet ():\n",
+    "    pet = [nome_pet, espécie, idade, peso, nome_dono]\n",
+    "    print(f'{color_green}O novo animal cadastrado é: \\033[0m {pet} \\n')\n",
+    "    animais.append(pet)\n",
+    "\n",
+    "adicionar_pet()\n",
+    "\n",
+    "print(\"==============Todos animais===============\")\n",
     "message1 = 'Nome Pet'\n",
     "message2 = 'Espécie'\n",
     "message3 = 'Idade'\n",
@@ -218,8 +151,122 @@
     "color_b= \"\\33[36m\"\n",
     "style = \"\\33[1m\"\n",
     "background = \"\\33[47m\"\n",
-    "print(f'|{message1:{align}{width}}{message2:{align}{width}}{message3:{align}{width}}{message4:{align}{width}}{message5:{align}{width}}|')  \n",
-    "print(f'{animal}')"
+    "print(f'|{message1:{align}{width}}{message2:{align}{width}}{message3:{align}{width}}{message4:{align}{width}}{message5:{align}{width}}|') \n",
+    "for animal in animais: \n",
+    "    print(f'{animal}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Murphy', 'Gato', 6, 5.5, 'Juliana']\n",
+      "['Matilde', 'Peixe', '5', '2', 'Gabriel']\n",
+      "['Einsten', 'Gato', '5', '2.5', 'Leiticia']\n",
+      "['Tipi', 'Cachorro', 6, '17', 'Carlos']\n",
+      "\u001b[36mTotal de animais: \u001b[0m 4\n",
+      "_______ Remoção___________\n",
+      "\u001b[31m O animal a ser removido é:  \u001b[0m ['Murphy', 'Gato', 6, 5.5, 'Juliana']\n",
+      "\u001b[31m O animal a ser removido é:  \u001b[0m ['Einsten', 'Gato', '5', '2.5', 'Leiticia']\n",
+      "Todos animais são: [['Matilde', 'Peixe', '5', '2', 'Gabriel'], ['Tipi', 'Cachorro', 6, '17', 'Carlos']]\n",
+      "\u001b[36mTotal de animais: \u001b[0m 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for animal in animais: \n",
+    "    print(f'{animal}')\n",
+    "numero_de_animais = len(animais)\n",
+    "print(f'{color_b}Total de animais: \\033[0m {numero_de_animais}')\n",
+    "print(\"_______ Remoção___________\")\n",
+    "\n",
+    "animais_removidos = []\n",
+    "def remover_pet ():\n",
+    "    for animal in animais:\n",
+    "        print(f'{color_red} O animal a ser removido é:  \\033[0m {animal}')\n",
+    "        if animal in animais:\n",
+    "            animais_removidos.append(animal)\n",
+    "            animais.remove(animal)\n",
+    "        else: \n",
+    "            print(\"Não tem o nome pet\")\n",
+    "        \n",
+    "remover_pet()\n",
+    "print(f'Todos animais são: {animais}')\n",
+    "numero_de_animais = len(animais)\n",
+    "print(f'{color_b}Total de animais: \\033[0m {numero_de_animais}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Número de animais: 3\n",
+      "_______Atualizar___________\n",
+      "\u001b[33m O animal a ser atualizado será: \u001b[0m ['Matilde', 'Peixe', '5', '2', 'Gabriel']\n",
+      "\u001b[32mO animal atualizado é: \u001b[0m ['Matilde', 'Coelho', 2, 1.0, 'Gabriel']\n",
+      "\u001b[33m O animal a ser atualizado será: \u001b[0m [['Murphy', 'Gato', 6, 5.5, 'Juliana'], ['Einsten', 'Gato', '5', '2.5', 'Leiticia']]\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[195], line 19\u001b[0m\n\u001b[0;32m     17\u001b[0m         \u001b[38;5;28;01melse\u001b[39;00m: \n\u001b[0;32m     18\u001b[0m             \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124meste animal não está cadastrado\u001b[39m\u001b[38;5;124m'\u001b[39m)        \n\u001b[1;32m---> 19\u001b[0m \u001b[43matualizar_animal\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     21\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTodos animais são: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00manimais\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     22\u001b[0m numero_de_animais \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(animais)\n",
+      "Cell \u001b[1;32mIn[195], line 13\u001b[0m, in \u001b[0;36matualizar_animal\u001b[1;34m()\u001b[0m\n\u001b[0;32m     10\u001b[0m nova_idade \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mQual a idade do seu pet?\u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[0;32m     11\u001b[0m novo_peso \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mfloat\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mQual o peso do seu pet?\u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[1;32m---> 13\u001b[0m pet_atualizado \u001b[38;5;241m=\u001b[39m [animal[\u001b[38;5;241m0\u001b[39m], nova_especie, nova_idade, novo_peso, \u001b[43manimal\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m]\u001b[49m]\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcolor_green\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124mO animal atualizado é: \u001b[39m\u001b[38;5;130;01m\\033\u001b[39;00m\u001b[38;5;124m[0m \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpet_atualizado\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     15\u001b[0m animais\u001b[38;5;241m.\u001b[39mremove(animal)\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "numero_de_animais = len(animais)\n",
+    "print(f\"  Número de animais: {numero_de_animais}\")\n",
+    "print(\"_______Atualizar___________\")\n",
+    "\n",
+    "def atualizar_animal():\n",
+    "    for animal in animais:\n",
+    "        print(f'{color_y} O animal a ser atualizado será: \\033[0m {animal}')\n",
+    "        if animal in animais:\n",
+    "            nova_especie = str(input('Qual a espécie do seu pet?'))\n",
+    "            nova_idade = int(input('Qual a idade do seu pet?'))\n",
+    "            novo_peso = float(input('Qual o peso do seu pet?'))\n",
+    "            \n",
+    "            pet_atualizado = [animal[0], nova_especie, nova_idade, novo_peso, animal[4]]\n",
+    "            print(f'{color_green}O animal atualizado é: \\033[0m {pet_atualizado}')\n",
+    "            animais.remove(animal)\n",
+    "            animais.append(pet_atualizado)\n",
+    "        else: \n",
+    "            print(f'este animal não está cadastrado')        \n",
+    "atualizar_animal()\n",
+    "\n",
+    "print(f'Todos animais são: {animais}')\n",
+    "numero_de_animais = len(animais)\n",
+    "print(f\"  Número de animais: {numero_de_animais}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##################                                              \n",
+    "\n",
+    "\n",
+    "Aulas anteriores                                            \n",
+    "\n",
+    "\n",
+    "####################"
    ]
   },
   {
