--- a/juliana/juliana_notebook.ipynb
+++ b/juliana/juliana_notebook.ipynb
@@ -9,66 +9,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  Número de animais: 3\n",
-      "_______Buscar___________\n",
-      "\u001b[33m A \u001b[0m Leiticia \u001b[33m é dono de: \u001b[0m ['Matilde', 'Peixe', '2', '1', 'Leiticia'] e ['Matilde', 'Peixe', '2', '1', 'Leiticia']\n",
-      "Leiticia é dono de mais de um pet\n",
-      "\u001b[33m A \u001b[0m Juliana \u001b[33m é dono de: \u001b[0m ['Murphy', 'Cachorro', '3', '15', 'Juliana'] e ['Murphy', 'Cachorro', '3', '15', 'Juliana']\n",
-      "Juliana é dono de mais de um pet\n",
-      "\u001b[33m A \u001b[0m Leiticia \u001b[33m é dono de: \u001b[0m ['Einsten', 'Cachorro', '3', '2.5', 'Leiticia'] e ['Einsten', 'Cachorro', '3', '2.5', 'Leiticia']\n",
-      "Leiticia é dono de mais de um pet\n"
-     ]
-    }
-   ],
-   "source": [
-    "import random\n",
-    "numero_de_animais = len(animais)\n",
-    "print(f\"  Número de animais: {numero_de_animais}\")\n",
-    "print(\"_______Buscar___________\")\n",
-    "\n",
-    "def buscar_animais_do_dono():\n",
-    "    for animal in animais:\n",
-    "        dono = animal[4]\n",
-    "        if  dono in animal in animais:\n",
-    "            print(f'{color_y} A \\033[0m {dono} {color_y} é dono de: \\033[0m {animal} e {animal}')\n",
-    "            if dono:\n",
-    "                print(f\"{dono} é dono de mais de um pet\")\n",
-    "        else:\n",
-    "            print('Não há castrado desta pessoa')\n",
-    "            \n",
-    "    \n",
-    "buscar_animais_do_dono()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 187,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32mO novo animal cadastrado é: \u001b[0m ['Dona Florinda', 'Gato', '1', '15', 'Juliana']\n",
-      "\u001b[32mO novo animal cadastrado é: \u001b[0m ['Matilde', 'Peixe', '5', '2', 'Gabriel']\n",
-      "\u001b[32mO novo animal cadastrado é: \u001b[0m ['Medusa', 'Peixe', '2', '2', 'Ana']\n",
-      "\u001b[32mO novo animal cadastrado é: \u001b[0m ['Einsten', 'Gato', '5', '2.5', 'Leiticia']\n",
-      "\u001b[32mO novo animal cadastrado é: \u001b[0m ['Mendel', 'Cachorro', '2', '15', 'Marcela']\n",
-      "\u001b[36mTodos animais são: \u001b[0m [['Koda', 'Cão', 6, 18, 'Carlos'], ['Murphy', 'Gato', 6, 5.5, 'Juliana'], ['Dona Florinda', 'Gato', '1', '15', 'Juliana'], ['Matilde', 'Peixe', '5', '2', 'Gabriel'], ['Medusa', 'Peixe', '2', '2', 'Ana'], ['Einsten', 'Gato', '5', '2.5', 'Leiticia'], ['Mendel', 'Cachorro', '2', '15', 'Marcela']]\n",
-      "_______ Remoção___________\n"
+      "\u001b[32mO novo animal cadastrado é: \u001b[0m ['Bernardo', 'Cão', 6, '10', 'Marcela']\n",
+      "\u001b[32mO novo animal cadastrado é: \u001b[0m ['Anabele', 'Peixe', 6, '1', 'Marcela']\n",
+      "\u001b[32mO novo animal cadastrado é: \u001b[0m ['Hórus', 'Gato', 2, '10', 'Leiticia']\n",
+      "\u001b[32mO novo animal cadastrado é: \u001b[0m ['Pipoca', 'Peixe', 6, '10', 'Juliana']\n",
+      "\u001b[32mO novo animal cadastrado é: \u001b[0m ['Kronos', 'Tartaruga', 4, '3', 'Carlos']\n",
+      "\u001b[32mO novo animal cadastrado é: \u001b[0m ['Zeus', 'Cão', 3, '5', 'Gabriel']\n",
+      "\u001b[32mO novo animal cadastrado é: \u001b[0m ['Poseidon', 'Cão', 4, '5', 'Gabriel']\n"
      ]
     }
    ],
    "source": [
     "#desafio tentativa oficial \n",
-    "\n",
+    "import random\n",
     "align = \"^\" # ['<', '>', '^'] \n",
     "width = 15\n",
     "color_green = \"\\33[32m\"\n",
@@ -77,6 +37,11 @@
     "color_b= \"\\33[36m\"\n",
     "style = \"\\33[1m\"\n",
     "background = \"\\33[47m\"\n",
+    "nomes_pets = [\"Bernardo\", \"Anabele\", \"Hórus\", \"Pipoca\", \"Kronos\", \"Zeus\", \"Poseidon\"]\n",
+    "espécies = [\"Tartaruga\", \"Cão\", \"Gato\", \"Peixe\", \"Réptil\"]\n",
+    "idades = range(0,7)\n",
+    "pesos = [\"3\", \"1\", \"10\", \"5\", \"0.5\"]\n",
+    "nomes_donos = [\"Juliana\", \"Leiticia\", \"Carlos\", \"Marcela\", \"Gabriel\"]\n",
     "\n",
     "animais = [\n",
     "    [\"Koda\", \"Cão\", 6, 18, \"Carlos\"],\n",
@@ -99,38 +64,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32mO novo animal cadastrado é: \u001b[0m ['Tipi', 'Cachorro', 6, '17', 'Carlos'] \n",
+      "\u001b[32mO novo animal cadastrado é: \u001b[0m ['Carlos', 'um hombre gostoso', 32, '66', 'Juliana hihi'] \n",
       "\n",
-      "=============================\n",
+      "==============Todos animais===============\n",
       "| Nome Pet  Espécie    Idade    Peso(kg)    Dono   |\n",
-      "['Koda', 'Cão', 6, 18, 'Carlos']\n",
       "['Murphy', 'Gato', 6, 5.5, 'Juliana']\n",
-      "['Dona Florinda', 'Gato', '1', '15', 'Juliana']\n",
-      "['Matilde', 'Peixe', '5', '2', 'Gabriel']\n",
-      "['Medusa', 'Peixe', '2', '2', 'Ana']\n",
-      "['Einsten', 'Gato', '5', '2.5', 'Leiticia']\n",
-      "['Mendel', 'Cachorro', '2', '15', 'Marcela']\n",
-      "['Tipi', 'Cachorro', 6, '17', 'Carlos']\n"
+      "['Bernardo', 'Cão', 6, '10', 'Marcela']\n",
+      "['Anabele', 'Peixe', 6, '1', 'Marcela']\n",
+      "['Hórus', 'Gato', 2, '10', 'Leiticia']\n",
+      "['Pipoca', 'Peixe', 6, '10', 'Juliana']\n",
+      "['Kronos', 'Tartaruga', 4, '3', 'Carlos']\n",
+      "['Poseidon', 'Cão', 4, '5', 'Gabriel']\n",
+      "['Fumaça', 'Gato', 2, '4', 'Juliana']\n",
+      "['Zeus', 'Gato', 6, 9.0, 'Gabriel']\n",
+      "['Koda', 'Cachorro', 6, 19.0, 'Carlos']\n",
+      "['Fumaça', 'Hamster', 1, 0.5, 'Savanna']\n",
+      "['Carlos', 'um hombre gostoso', 32, '66', 'Juliana hihi']\n"
      ]
     }
    ],
    "source": [
     "#adicionar manualmente\n",
     "\n",
-    "nome_pet = str(input('Qual o nome do seu pet?'))\n",
-    "espécie = str(input('Qual a espécie do seu pet?'))\n",
-    "idade = int(input('Qual idade do seu pet?'))\n",
-    "peso = str(input('Qual o peso do seu pet(em kg)?'))\n",
-    "nome_dono = str(input('Qual é o seu nome(nome do dono)?'))\n",
     "\n",
     "def adicionar_pet ():\n",
+    "    nome_pet = str(input('Qual o nome do seu pet?'))\n",
+    "    espécie = str(input('Qual a espécie do seu pet?'))\n",
+    "    idade = int(input('Qual idade do seu pet?'))\n",
+    "    peso = str(input('Qual o peso do seu pet(em kg)?'))\n",
+    "    nome_dono = str(input('Qual é o seu nome(nome do dono)?'))\n",
     "    pet = [nome_pet, espécie, idade, peso, nome_dono]\n",
     "    print(f'{color_green}O novo animal cadastrado é: \\033[0m {pet} \\n')\n",
     "    animais.append(pet)\n",
@@ -158,23 +127,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "['Koda', 'Cão', 6, 18, 'Carlos']\n",
       "['Murphy', 'Gato', 6, 5.5, 'Juliana']\n",
-      "['Matilde', 'Peixe', '5', '2', 'Gabriel']\n",
-      "['Einsten', 'Gato', '5', '2.5', 'Leiticia']\n",
-      "['Tipi', 'Cachorro', 6, '17', 'Carlos']\n",
-      "\u001b[36mTotal de animais: \u001b[0m 4\n",
+      "['Bernardo', 'Cão', 6, '10', 'Marcela']\n",
+      "['Anabele', 'Peixe', 6, '1', 'Marcela']\n",
+      "['Hórus', 'Gato', 2, '10', 'Leiticia']\n",
+      "['Pipoca', 'Peixe', 6, '10', 'Juliana']\n",
+      "['Kronos', 'Tartaruga', 4, '3', 'Carlos']\n",
+      "['Zeus', 'Cão', 3, '5', 'Gabriel']\n",
+      "['Poseidon', 'Cão', 4, '5', 'Gabriel']\n",
+      "['Sirius', 'Lobo', 5, '25', 'Juliana']\n",
+      "\u001b[36mTotal de animais: \u001b[0m 10\n",
       "_______ Remoção___________\n",
-      "\u001b[31m O animal a ser removido é:  \u001b[0m ['Murphy', 'Gato', 6, 5.5, 'Juliana']\n",
-      "\u001b[31m O animal a ser removido é:  \u001b[0m ['Einsten', 'Gato', '5', '2.5', 'Leiticia']\n",
-      "Todos animais são: [['Matilde', 'Peixe', '5', '2', 'Gabriel'], ['Tipi', 'Cachorro', 6, '17', 'Carlos']]\n",
-      "\u001b[36mTotal de animais: \u001b[0m 2\n"
+      "Não tem o nome pet\n",
+      "Não tem o nome pet\n",
+      "Não tem o nome pet\n",
+      "Não tem o nome pet\n",
+      "Não tem o nome pet\n",
+      "Não tem o nome pet\n",
+      "Não tem o nome pet\n",
+      "Não tem o nome pet\n",
+      "Não tem o nome pet\n",
+      "\u001b[31m O animal a ser removido é:  \u001b[0m ['Sirius', 'Lobo', 5, '25', 'Juliana']\n",
+      "- ['Koda', 'Cão', 6, 18, 'Carlos']\n",
+      "- ['Murphy', 'Gato', 6, 5.5, 'Juliana']\n",
+      "- ['Bernardo', 'Cão', 6, '10', 'Marcela']\n",
+      "- ['Anabele', 'Peixe', 6, '1', 'Marcela']\n",
+      "- ['Hórus', 'Gato', 2, '10', 'Leiticia']\n",
+      "- ['Pipoca', 'Peixe', 6, '10', 'Juliana']\n",
+      "- ['Kronos', 'Tartaruga', 4, '3', 'Carlos']\n",
+      "- ['Zeus', 'Cão', 3, '5', 'Gabriel']\n",
+      "- ['Poseidon', 'Cão', 4, '5', 'Gabriel']\n",
+      "\u001b[36mTotal de animais: \u001b[0m 9\n"
      ]
     }
    ],
@@ -186,47 +177,51 @@
     "print(\"_______ Remoção___________\")\n",
     "\n",
     "animais_removidos = []\n",
-    "def remover_pet ():\n",
-    "    for animal in animais:\n",
-    "        print(f'{color_red} O animal a ser removido é:  \\033[0m {animal}')\n",
-    "        if animal in animais:\n",
+    "def remover_pet (nome_pet):\n",
+    "    for index, animal in enumerate(animais):\n",
+    "        \n",
+    "        if nome_pet in animal:\n",
+    "            print(f'{color_red} O animal a ser removido é:  \\033[0m {animal}')\n",
     "            animais_removidos.append(animal)\n",
     "            animais.remove(animal)\n",
     "        else: \n",
     "            print(\"Não tem o nome pet\")\n",
     "        \n",
-    "remover_pet()\n",
-    "print(f'Todos animais são: {animais}')\n",
+    "remover_pet(\"Sirius\")\n",
+    "\n",
+    "for animal in animais:\n",
+    "    print(f\"- {animal}\")\n",
+    "\n",
     "numero_de_animais = len(animais)\n",
     "print(f'{color_b}Total de animais: \\033[0m {numero_de_animais}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  Número de animais: 3\n",
+      "  Número de animais: 11\n",
       "_______Atualizar___________\n",
-      "\u001b[33m O animal a ser atualizado será: \u001b[0m ['Matilde', 'Peixe', '5', '2', 'Gabriel']\n",
-      "\u001b[32mO animal atualizado é: \u001b[0m ['Matilde', 'Coelho', 2, 1.0, 'Gabriel']\n",
-      "\u001b[33m O animal a ser atualizado será: \u001b[0m [['Murphy', 'Gato', 6, 5.5, 'Juliana'], ['Einsten', 'Gato', '5', '2.5', 'Leiticia']]\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[195], line 19\u001b[0m\n\u001b[0;32m     17\u001b[0m         \u001b[38;5;28;01melse\u001b[39;00m: \n\u001b[0;32m     18\u001b[0m             \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124meste animal não está cadastrado\u001b[39m\u001b[38;5;124m'\u001b[39m)        \n\u001b[1;32m---> 19\u001b[0m \u001b[43matualizar_animal\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     21\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTodos animais são: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00manimais\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     22\u001b[0m numero_de_animais \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(animais)\n",
-      "Cell \u001b[1;32mIn[195], line 13\u001b[0m, in \u001b[0;36matualizar_animal\u001b[1;34m()\u001b[0m\n\u001b[0;32m     10\u001b[0m nova_idade \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mQual a idade do seu pet?\u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[0;32m     11\u001b[0m novo_peso \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mfloat\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mQual o peso do seu pet?\u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[1;32m---> 13\u001b[0m pet_atualizado \u001b[38;5;241m=\u001b[39m [animal[\u001b[38;5;241m0\u001b[39m], nova_especie, nova_idade, novo_peso, \u001b[43manimal\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m]\u001b[49m]\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcolor_green\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124mO animal atualizado é: \u001b[39m\u001b[38;5;130;01m\\033\u001b[39;00m\u001b[38;5;124m[0m \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpet_atualizado\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     15\u001b[0m animais\u001b[38;5;241m.\u001b[39mremove(animal)\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+      "Não foi possivel prosseguir com a atualização\n",
+      "\u001b[32mO animal atualizado é: \u001b[0m ['Fumaça', 'Hamster', 1, 0.5, 'Savanna']\n",
+      "____________Todos animais são:____________\n",
+      "['Murphy', 'Gato', 6, 5.5, 'Juliana']\n",
+      "['Bernardo', 'Cão', 6, '10', 'Marcela']\n",
+      "['Anabele', 'Peixe', 6, '1', 'Marcela']\n",
+      "['Hórus', 'Gato', 2, '10', 'Leiticia']\n",
+      "['Pipoca', 'Peixe', 6, '10', 'Juliana']\n",
+      "['Kronos', 'Tartaruga', 4, '3', 'Carlos']\n",
+      "['Poseidon', 'Cão', 4, '5', 'Gabriel']\n",
+      "['Fumaça', 'Gato', 2, '4', 'Juliana']\n",
+      "['Zeus', 'Gato', 6, 9.0, 'Gabriel']\n",
+      "['Koda', 'Cachorro', 6, 19.0, 'Carlos']\n",
+      "['Fumaça', 'Hamster', 1, 0.5, 'Savanna']\n",
+      "  Número de animais: 11\n"
      ]
     }
    ],
@@ -235,25 +230,73 @@
     "print(f\"  Número de animais: {numero_de_animais}\")\n",
     "print(\"_______Atualizar___________\")\n",
     "\n",
-    "def atualizar_animal():\n",
+    "def atualizar_animal(nome_pet):\n",
     "    for animal in animais:\n",
-    "        print(f'{color_y} O animal a ser atualizado será: \\033[0m {animal}')\n",
-    "        if animal in animais:\n",
-    "            nova_especie = str(input('Qual a espécie do seu pet?'))\n",
-    "            nova_idade = int(input('Qual a idade do seu pet?'))\n",
-    "            novo_peso = float(input('Qual o peso do seu pet?'))\n",
+    "        if nome_pet in animal:\n",
+    "            resposta = input(f'O animal é: {animal}, este é o animal que gostaria de atualizar? Responda Sim ou Não')\n",
+    "            if resposta == \"Sim\":\n",
+    "                nova_especie = str(input('Qual a espécie do seu pet?'))\n",
+    "                nova_idade = int(input('Qual a idade do seu pet?'))\n",
+    "                novo_peso = float(input('Qual o peso do seu pet?'))\n",
     "            \n",
-    "            pet_atualizado = [animal[0], nova_especie, nova_idade, novo_peso, animal[4]]\n",
-    "            print(f'{color_green}O animal atualizado é: \\033[0m {pet_atualizado}')\n",
-    "            animais.remove(animal)\n",
-    "            animais.append(pet_atualizado)\n",
-    "        else: \n",
-    "            print(f'este animal não está cadastrado')        \n",
-    "atualizar_animal()\n",
-    "\n",
-    "print(f'Todos animais são: {animais}')\n",
+    "                pet_atualizado = [animal[0], nova_especie, nova_idade, novo_peso, animal[4]]\n",
+    "                print(f'{color_green}O animal atualizado é: \\033[0m {pet_atualizado}')\n",
+    "                animais.append(pet_atualizado)\n",
+    "                animais.remove(animal)\n",
+    "            else: \n",
+    "                print(\"Não foi possivel prosseguir com a atualização\")        \n",
+    "        else:\n",
+    "            if animal == animais:\n",
+    "                print(f'Este animal não está cadastrado')        \n",
+    "atualizar_animal(\"Fumaça\")\n",
+    "print(\"____________Todos animais são:____________\")\n",
+    "for animal in animais:\n",
+    "    print(f\"{animal}\")\n",
     "numero_de_animais = len(animais)\n",
     "print(f\"  Número de animais: {numero_de_animais}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_______Buscar pelo NOME do PET___________\n",
+      "\u001b[33m O pet Carlos possui os dados:\u001b[0m  ['Carlos', 'um hombre gostoso', 32, '66', 'Juliana hihi']\n",
+      "\n",
+      "_______Buscar pelo DONO___________\n",
+      "\u001b[33m A pessoa: \u001b[0m Juliana \u001b[33m é dono de: \u001b[0m ['Murphy', 'Gato', 6, 5.5, 'Juliana']\n",
+      "\u001b[33m A pessoa: \u001b[0m Juliana \u001b[33m é dono de: \u001b[0m ['Pipoca', 'Peixe', 6, '10', 'Juliana']\n",
+      "\u001b[33m A pessoa: \u001b[0m Juliana \u001b[33m é dono de: \u001b[0m ['Fumaça', 'Gato', 2, '4', 'Juliana']\n",
+      "\u001b[33m A pessoa: \u001b[0m Juliana \u001b[33m é dono de: \u001b[0m ['Carlos', 'um hombre gostoso', 32, '66', 'Juliana hihi']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"_______Buscar pelo NOME do PET___________\")\n",
+    "\n",
+    "def encontra_pet_nome(nome_pet):\n",
+    "    for animal in animais:\n",
+    "        if nome_pet in animal[0]:\n",
+    "            print(f\"{color_y} O pet {nome_pet} possui os dados:\\033[0m  {animal}\\n\")\n",
+    "        else:\n",
+    "            if animal == animais:\n",
+    "                print(\"Não encontramos este pet \\n\")\n",
+    "encontra_pet_nome(\"Carlos\")\n",
+    "\n",
+    "print(\"_______Buscar pelo DONO___________\")\n",
+    "def buscar_animais_do_dono(nome_dono):\n",
+    "    for index, animal in enumerate(animais):\n",
+    "        if  nome_dono in animal[4]:\n",
+    "            print(f'{color_y} A pessoa: \\033[0m {nome_dono} {color_y} é dono de: \\033[0m {animal}')\n",
+    "        else:\n",
+    "            if animal == animais:\n",
+    "                print('Não há castrado desta pessoa')           \n",
+    "buscar_animais_do_dono(\"Juliana\")"
    ]
   },
   {
