--- a/0004.ipynb
+++ b/0004.ipynb
@@ -75,7 +75,6 @@
    "source": [
     "# Primeiro livro\n",
     "\n",
-    "\n",
     "print(f\"Os primeiros livros de cada saga são: {livros_harry_potter[0]}, {livprimeiro_livro_hp = livros_harry_potter[0]ros_tolkien[0]} e {livros_twilight[0]}\")"
    ]
   },
@@ -220,19 +219,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Qual o livro do meio?\n",
     "\n",
+    "\n",
+    "\n",
+    "\n",
     "counter = 0\n",
     "for livro in livros_twilight:\n",
-    "    counter = (counter + 1)\n",
-    "\n",
-    "meio_livro_tw = counter # FIX THIS\n",
-    "print(f\"O do meio livro de twilight é: {meio_livro_tw}\")\n"
+    "    counter = (counter - 0)\n",
+    "    ultimo_livro_tw = livros_twilight[counter]\n",
+    "print(f\"O do meio livro de twilight é: {meio_livro_tw}\")\n",
+    "\n"
    ]
   },
   {
@@ -262,14 +262,26 @@
     "\n",
     "### DICA\n",
     "\n",
-    "Utilize a função `sortear_livro` para determinar qual livro a pessoa irá alugar\n"
+    "Utilize a função `sorted_livro` para determinar qual livro a pessoa irá alugar\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for -: 'list' and 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 38\u001b[0m\n\u001b[0;32m     36\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m livro_alugado \u001b[38;5;129;01min\u001b[39;00m livros_harry_potter:\n\u001b[0;32m     37\u001b[0m     livro_alugado \u001b[38;5;241m=\u001b[39m sortear_livro \u001b[38;5;129;01min\u001b[39;00m livros_harry_potter\n\u001b[1;32m---> 38\u001b[0m     livros_restantes \u001b[38;5;241m=\u001b[39m \u001b[43mlivros_harry_potter\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m[\u001b[49m\u001b[43mlivro_alugado\u001b[49m\u001b[43m]\u001b[49m\n\u001b[0;32m     39\u001b[0m     \u001b[38;5;28mprint\u001b[39m(livros_restantes)\n\u001b[0;32m     43\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21malugar_livros\u001b[39m():\n\u001b[0;32m     44\u001b[0m     \n\u001b[0;32m     45\u001b[0m     \u001b[38;5;66;03m# preencher desafio aqui\u001b[39;00m\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'list' and 'list'"
+     ]
+    }
+   ],
    "source": [
     "import random \n",
     "\n",
@@ -303,12 +315,11 @@
     "pessoas = [\"Ana\", \"Bruno\", \"Carlos\", \"Diana\", \"Eduardo\", \"Fernanda\", \"Gustavo\", \"Helena\", \"Igor\", \"Julia\"]\n",
     "saldo = 0\n",
     "\n",
-    "\n",
     "def sortear_livro(livros: list[str]) -> str:\n",
     "    return random.choice(livros)\n",
     "\n",
-    "\n",
     "def alugar_livros():\n",
+    "    \n",
     "    # preencher desafio aqui\n",
     "    pass\n",
     "\n",
@@ -334,7 +345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
